<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beacon UI</string>

    <!-- Layout Strings -->
    <string name="tutor_button">Skip tutorial</string>
    <string name="start_button">Start Beacon</string>

    <!-- AcitonBar Strins -->
    <string name="add_beacon">Add</string>
    <string name="paired_beacon">Paired Beacon</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sensor_slide_menu">SensorSlideMenu</string>
    <string name="title_activity_beacon_info">BeaconInfoActivity</string>

    <!-- Beacon infoReconfigureReconfigure -->
    <string name="beacon_info">Beacon Infomation</string>
    <string name="reconfig">Reconfigure</string>
    <string name="delete">Delete It</string>
    <string name="device_info">Device Infomation</string>
    <string name="sensor_info">Sensor Infomation</string>
    <string name="actuator_info">Actuator Infomation</string>
    <string name="device_name">Device Name: </string>
    <string name="device_id">Device ID: </string>
    <string name="sensor_name">Sensor Name: </string>
    <string name="sensor_freq">Frequency: </string>
    <string name="sensor_unit">Unit: </string>
    <string name="actuator_name">Actuator Name: </string>
    <string name="actuator_trigger">Actuator Trigger: </string>
    <string name="actuator_action">Actuator Action: </string>
    <string name="actuator_compare">Compare: </string>
    <string name="actuator_compare_value">Compare Value: </string>

    <!-- sensor frame -->
    <string name="search_hint">Search beacon sensor</string>
    <string name="title_activity_configure">ConfigureActivity</string>

    <!-- configure -->
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="title_activity_sensor_list">SensorListActivity</string>
    <string name="title_activity_normal_setup">NormalSetupActivity</string>

    <!-- normal configure -->
    <string name="sensor">Sensor </string>
    <string name="sensor_frq">Radio Frequency </string>
    <string name="actuator">Actuator </string>
    <string name="trigger">Trigger from: </string>
    <string name="action_if">If</string>
    <string name="action_then">Then</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="title_activity_atom_list">AtomListActivity</string>
    <string name="no">Again</string>
    <string name="yes">Yes</string>

</resources>