<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NormalSetupActivity" >

    <LinearLayout
        android:id="@+id/record_overlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/setup_scrollview"
        android:layout_centerInParent="true"
        android:layout_margin="0dp"
        android:background="@color/black"
        android:clickable="true"
        android:gravity="center"
        android:visibility="gone" >

        <TextView
            android:id="@+id/record_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="#F0FF0000"
            android:textSize="140sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/setup_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:padding="14.0dip"
        android:scrollbars="none" >

        <ViewSwitcher
            android:id="@+id/setup_viewswitcher"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:id="@+id/setup_all"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:background="@color/soft_white"
                android:paddingBottom="20.0dip"
                android:paddingTop="30.0dip" >

                <LinearLayout
                    android:id="@+id/setup_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/abs__action_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_name"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/setup_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/device_name"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setup_sensor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setup_name"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setup_sensor_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/setup_sensor_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setup_sensor_frq"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setup_sensor"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setup_sensor_frq_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_frq"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/setup_sensor_frq_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setup_actuator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setup_sensor_frq"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setup_actuator_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actuator"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/setup_actuator_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setup_trigger"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setup_actuator"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setup_trigger_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trigger"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/setup_trigger_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/setup_action_if"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setup_trigger"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setup_action_if_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_if"
                        android:textColor="@color/red"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/setup_action_if_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/setup_action_if_textview"
                        android:layout_weight="0.8" />

                    <EditText
                        android:id="@+id/setup_action_if_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/setup_action_if_spinner"
                        android:layout_weight="0.8"
                        android:background="@null"
                        android:hint="Value"
                        android:inputType="number"
                        android:singleLine="true" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/setup_action_then"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setup_action_if"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/setup_action_then_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_then"
                        android:textColor="@color/red"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/setup_action_then_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setup_action_then"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/normal_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dp"
                        android:background="@drawable/info_button_style"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/normal_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:background="@drawable/info_button_style"
                        android:text="@string/submit" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:id="@+id/setup_flash"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white" >
            </View>
        </ViewSwitcher>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/setup_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:visibility="gone" >

        <TextView
            android:id="@+id/setup_submit_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="Is setup Ok?"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setup_submit_info"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:gravity="center" >

            <Button
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/info_button_style"
                android:text="@string/yes" />

            <Button
                android:id="@+id/again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setup_submit_info"
                android:layout_margin="8dp"
                android:layout_toRightOf="@+id/yes"
                android:background="@drawable/info_button_style"
                android:text="@string/no" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>